--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,12 +9,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I am Yeoh Yu Zhi and this is my personal portfolio website. I am 14 years old and I like to playing Table Tennis and Soccer. My favourite team is Barcelona. My favourite subejects in school are Science and Mathematics. My CCA is Table Tennis. My 3rd language is German</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>I have a brother, aged 19 and a sister, age 23. I play Table Tennis and card games with them. I study in Dunman High School and my class is 3K. </p>
                 </div>
-                
+
             </div>
         </div>
     </section>
