--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
  <!-- About Section -->
     <section class="success bg-danger" id="about">
-        <div class="container">
+        <div class="container bg-danger">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
