--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,4 +12,7 @@
                 </div>
             </div>
         </div>
+        <head>
+          <link rel="shortcut icon" type="image/x-icon" href="/img/profile.png" />
+        </head>
     </header>
