--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,6 +19,9 @@
                                 <a href="{{ network.url }}" class="btn-social btn-outline"><i class="fa fa-fw fa-{{ network.title }}"></i></a>
                             </li>
 		                    {% endfor %}
+                            <li>
+                                <a href="mailto:yeoh.yuzhi@gmail.com" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
