changed links to white

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -22,9 +22,9 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #{{ site.color.primary }};
+    color: #FFFFFF {{ site.color.primary }};
 }
-
+/* {{ site.color.primary }} */
 h1,
 h2,
 h3,
