--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I am Yeoh Yu Zhi and this is my personal portfolio website. I am 15 years old and I like playing Table Tennis and Soccer. My favourite team is Barcelona. My favourite subejects in school are Science and Mathematics. My CCA is Table Tennis. My 3rd language is German</p>
+                    <p>I am Yeoh Yu Zhi and this is my personal portfolio website. I am 15 years old and I like playing Table Tennis and Soccer. My favourite team is Barcelona. My favourite subjects in school are Science and Mathematics. My CCA is Table Tennis. My 3rd language is German</p>
                 </div>
                 <div class="col-lg-4">
                     <p>I have a brother, aged 19 and a sister, age 23. I play Table Tennis and card games with them. I study in Dunman High School and my class is 3K. </p>
